// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users GET /api/user with invalid token should return a 401 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Unauthorized",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Unauthorized",
            "message": "Unauthorized",
            "statusCode": 401,
          },
          "statusCode": 401,
        },
      },
      "message": "Unauthorized",
    },
  },
  "status": 401,
}
`;

exports[`users POST /api/users with invalid parameters should return a 422 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "email": Array [
        "can't be blank",
      ],
      "password": Array [
        "can't be blank",
      ],
      "username": Array [
        "can't be blank",
      ],
    },
  },
  "status": 422,
}
`;

exports[`users POST /api/users/login with invalid parameters should return a 422 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "email or password": Array [
        "is invalid",
      ],
    },
  },
  "status": 422,
}
`;

exports[`users PUT /api/user with invalid token should return a 401 1`] = `
Object {
  "body": Object {
    "errors": Object {
      "error": Object {
        "data": null,
        "isBoom": true,
        "isServer": false,
        "message": "Unauthorized",
        "output": Object {
          "headers": Object {},
          "payload": Object {
            "error": "Unauthorized",
            "message": "Unauthorized",
            "statusCode": 401,
          },
          "statusCode": 401,
        },
      },
      "message": "Unauthorized",
    },
  },
  "status": 401,
}
`;
